--- a/src/client/index.html
+++ b/src/client/index.html
@@ -4,7 +4,7 @@
     <title>kubernati</title>
   </head>
   <body>
-    <div id="app">
+   <div id="root">
     </div>
     <!-- renderer.bundle.js from dist / the file that webpack creates from front-end -->
   </body>
