pushing to feature branch to begin work on new UI

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <title>kubernati</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css?family=Amatic+SC&display=swap');
+      @import url('https://fonts.googleapis.com/css?family=Nunito&display=swap');
+    </style>
   </head>
   <body>
    <div id="root">
