--- a/src/client/index.html
+++ b/src/client/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <title>kubernati</title>
-    <style>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <!-- <style>
       @import url('https://fonts.googleapis.com/css?family=Amatic+SC&display=swap');
       @import url('https://fonts.googleapis.com/css?family=Nunito&display=swap');
-    </style>
+    </style> -->
   </head>
   <body>
    <div id="root">
