--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>kubernati</title>
+    <title>KuberOptic</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <!-- <style>
       @import url('https://fonts.googleapis.com/css?family=Amatic+SC&display=swap');
